--- a/training.Rmd
+++ b/training.Rmd
@@ -137,6 +137,16 @@ sm <- import("statsmodels.api")
 smf <- import("statsmodels.formula.api")
 ```
 
+### Test percentage_correct
+
+```{r test_perc_corr}
+perc_corr <- far$percentage_correct("output/proj2017_obs.tif", "output/proj2017_icar.tif")
+obs <- perc_corr[1,,]
+pred <- perc_corr[2,,]
+sum(apply(obs,2,sum))
+sum(apply(pred,2,sum))
+```
+
 ### R/Python intro
 
 #### R
@@ -470,7 +480,7 @@ formula <- paste0("I(1-fordefor2010) + trials ~ C(sapm) + scale(altitude) +
                   scale(slope) +",
                   "scale(dist_defor) + np.power(scale(dist_defor),2) + ",
                   "scale(dist_edge) + ",
-                  "scale(dist_road) + cell")
+                  "scale(dist_road) + scale(dist_town) + cell")
 ```
 
 ### Fitting model parameters
@@ -694,7 +704,7 @@ Results are in hectares and number of pixels.
 count_d
 ```
 
-Second, we derive the predicted forest-cover change map for the period 2010-2017 following a total deforestation of 871,336 hectares between the two dates. 
+Second, we derive the predicted forest-cover change map for the period 2010-2017 following a total deforestation of 874,211 hectares between the two dates. 
 
 Note: Because forest covers about 9.3 Mha in 2010 [@Vieilledent2018], this corresponds to a total deforestation rate of 9% on the period 2010-2017, and to an annual deforestation rate of about 1.3%.yr$^{-1}$. 
 
@@ -702,7 +712,7 @@ Note: Because forest covers about 9.3 Mha in 2010 [@Vieilledent2018], this corre
 # Model predictions 2010-2017
 if (!file.exists("output/proj2017_icar.tif")) {
   fcc_icar_2017 <- far$deforest(input_raster="output/prob_icar.tif",
-                                hectares=871336, #count_d$area,
+                                hectares=874221, #count_d$area,
                                 output_file="output/proj2017_icar.tif",
                                 blk_rows=128L)
 }
@@ -827,138 +837,66 @@ df_mod_valid
 Models + environmental variables (raster) => probabilities
 
 ```{r prob, results="hide"}
-if (!file.exists("output/prob_glm.tif")) {
-  # Compute predictions with logistic regression
-  fig_prob_glm <- far$predict_raster(mod_glm, var_dir="data/model",
-                                     input_forest_raster="data/model/fordefor2010.tif",
-                                     output_file="output/prob_glm.tif",
-                                     blk_rows=128L, transform=TRUE)
+mod <- c("glm", "rf", "rfxy")
+for (i in 1:length(mod)) {
+  cat(glue("Probability in 2010: {mod[i]}"),"\n")
+  if (!file.exists("output/prob_{mod[i]}.tif")) {
+    
+    fig_prob <- far$predict_raster(glue("mod_{mod[i]}"), var_dir="data/model",
+                                   input_forest_raster="data/model/fordefor2010.tif",
+                                   output_file=glue("output/prob_{mod[i]}.tif"),
+                                   blk_rows=128L, transform=TRUE)
+  }
 }
 ```
 
-```{r prob_rf, results="hide"}
-if (!file.exists("output/prob_rf.tif")) {
-  # Compute predictions with logistic regression
-  fig_prob_rf <- far$predict_raster(mod_rf, var_dir="data/model",
-                                    input_forest_raster="data/model/fordefor2010.tif",
-                                    output_file="output/prob_rf.tif",
-                                    blk_rows=128L)
+#### Comparing model projections with observations on the period 2010-2017
+
+We project the deforestation on the period 2010-2017.
+
+```{r proj2017, results="hide"}
+mod <- c("icar", "glm", "rf", "rfxy")
+for (i in 1:length(mod)) {
+  cat(glue("Projections in 2017: {mod[i]}"),"\n")
+  if (!file.exists(glue("output/proj2017_{mod[i]}.tif"))) {
+    deforest <- far$deforest(input_raster=glue("output/prob_{mod[i]}.tif"),
+                             hectares=871336,
+                             output_file=glue("output/proj2017_{mod[i]}.tif"),
+                             blk_rows=128L)
+  }
 }
 ```
 
-```{r prob_rfxy, results="hide"}
-if (!file.exists("output/prob_rfxy.tif")) {
-  # Compute predictions with logistic regression
-  fig_prob_rf <- far$predict_raster(mod_rfxy, var_dir="data/model",
-                                    input_forest_raster="data/model/fordefor2010.tif",
-                                    output_file="output/prob_rfxy.tif",
-                                    blk_rows=128L)
+We compute the differences between model projections and observations for 2017.
+
+```{r compute_diff2017}
+mod <- c("icar", "glm", "rf", "rfxy")
+index_diff2017_30m <- NULL
+for (i in 1:length(comp)) {
+  cat(glue("Differences in 2017: {mod[i]}_obs"),"\n")
+  #if (!file.exists(glue("output/diff2017_{mod[i]}_obs.tif"))) {
+    far$r_diffproj(inputA=glue("output/proj2017_{mod[i]}.tif"),
+                   inputB=glue("output/proj2017_obs.tif"),
+                   output_file=glue("output/diff2017_{mod[i]}_obs.tif"),
+                   blk_rows=64L)
+  #}
+  mat <- far$mat_diffproj(glue("output/diff2017_{mod[i]}_obs.tif"))
+  index_diff2017_30m <- rbind(index_diff2017_30m, accuracy_indices(mat))
 }
+diff2017_comp_30m <- index_diff2017_30m %>%
+  dplyr::mutate(res=rep(30,4), mod=mod) %>%
+  dplyr::select(8,9,1:7)
 ```
 
-#### Project forest cover change on 2010-2017
+#### Comparing model projections on the period 2010-2050
 
-```{r proj2017_glm, results="hide"}
-if (!file.exists("output/proj2017_glm.tif")) {
-  deforest <- far$deforest(input_raster="output/prob_glm.tif",
-                           hectares=871336,
-                           output_file="output/proj2017_glm.tif",
-                           blk_rows=128L)
-}
-```
-
-```{r proj2017_rf, results="hide"}
-if (!file.exists("output/proj2017_rf.tif")) {
-  deforest <- far$deforest(input_raster="output/prob_rf.tif",
-                           hectares=871336,
-                           output_file="output/proj2017_rf.tif",
-                           blk_rows=128L)
-}
-```
-
-```{r proj2017_rfxy, results="hide"}
-if (!file.exists("output/proj2017_rfxy.tif")) {
-  deforest <- far$deforest(input_raster="output/prob_rfxy.tif",
-                           hectares=871336,
-                           output_file="output/proj2017_rfxy.tif",
-                           blk_rows=128L)
-}
-```
-
-#### Compute performance indexes
-
-```{r tval_glm}
-if (!file.exists("output/val_npix_glm.txt")) {
-	tval_glm_df <- far$validation_npix(r_pred="output/proj2017_glm.tif",
-																		 r_obs="output/proj2017_obs.tif",
-																		 output_file="output/val_npix_glm.txt", 
-																		 value_f=1,
-																		 value_d=0,
-																		 square_size=33L)
-}
-tval_glm_df <- read.table("output/val_npix_glm.txt",header=TRUE,sep=",")
-e <- extent(raster("output/proj2017_glm.tif"))
-cor_glm <- cor_scale(df=tval_glm_df, e=e, square_size=33)
-```
-
-```{r tval_rf}
-if (!file.exists("output/val_npix_rf.txt")) {
-	tval_rf_df <- far$validation_npix(r_pred="output/proj2017_rf.tif",
-																		 r_obs="output/proj2017_obs.tif",
-																		 output_file="output/val_npix_rf.txt", 
-																		 value_f=1,
-																		 value_d=0,
-																		 square_size=33L)
-}
-tval_rf_df <- read.table("output/val_npix_rf.txt",header=TRUE,sep=",")
-e <- extent(raster("output/proj2017_rf.tif"))
-cor_rf <- cor_scale(df=tval_rf_df, e=e, square_size=33)
-```
-
-```{r tval_rfxy}
-if (!file.exists("output/val_npix_rfxy.txt")) {
-	tval_rfxy_df <- far$validation_npix(r_pred="output/proj2017_rfxy.tif",
-																		 r_obs="output/proj2017_obs.tif",
-																		 output_file="output/val_npix_rfxy.txt", 
-																		 value_f=1,
-																		 value_d=0,
-																		 square_size=33L)
-}
-tval_rfxy_df <- read.table("output/val_npix_rfxy.txt",header=TRUE,sep=",")
-e <- extent(raster("output/proj2017_rfxy.tif"))
-cor_rfxy <- cor_scale(df=tval_rfxy_df, e=e, square_size=33)
-```
-
-```{r tval_icar}
-if (!file.exists("output/val_npix_icar.txt")) {
-	tval_icar_df <- far$validation_npix(r_pred="output/proj2017_icar.tif",
-																		 r_obs="output/proj2017_obs.tif",
-																		 output_file="output/val_npix_icar.txt", 
-																		 value_f=1,
-																		 value_d=0,
-																		 square_size=33L)
-}
-tval_icar_df <- read.table("output/val_npix_icar.txt",header=TRUE,sep=",")
-e <- extent(raster("output/proj2017_icar.tif"))
-cor_icar <- cor_scale(df=tval_icar_df, e=e, square_size=33)
-```
-
-```{r cor_comp}
-cor_comp <- cor_glm %>%
-	dplyr::rename(cor_glm=cor) %>%
-	dplyr::mutate(cor_rf=cor_rf$cor,cor_rfxy=cor_rfxy$cor,cor_icar=cor_icar$cor) %>%
-	dplyr::select(-coeff)
-readr::write_csv(cor_comp,path="output/cor_comp.txt")
-cor_comp
-```
-
-#### Project forest cover change on 2010-2050
+We project the deforestation on the period 2010-2050.
 
 ```{r proj2050, results="hide"}
 mod <- c("icar", "glm", "rf", "rfxy")
 for (i in 1:length(mod)) {
-  if (!file.exists(glue("output/diff2050_{mod[i]}.tif"))) {
-    cat(glue("Projections in 2050: {mod[i]}"),"\n")
+  cat(glue("Projections in 2050: {mod[i]}"),"\n")
+  if (!file.exists(glue("output/proj2050_{mod[i]}.tif"))) {
     deforest <- far$deforest(input_raster=glue("output/prob_{mod[i]}.tif"),
                              hectares=4000000,
                              output_file=glue("output/proj2050_{mod[i]}.tif"),
@@ -967,11 +905,9 @@ for (i in 1:length(mod)) {
 }
 ```
 
-#### Comparing projection maps in 2050
+We compute the differences between model projections for 2050.
 
-First we compute the differences between model projections for 2050.
-
-```{r diff2050}
+```{r compute_diff2050}
 comp <- c("icar_glm", "icar_rf", "icar_rfxy", "rfxy_rf")
 index_diff2050_30m <- NULL
 for (i in 1:length(comp)) {
@@ -982,19 +918,19 @@ for (i in 1:length(comp)) {
     far$r_diffproj(inputA=glue("output/proj2050_{m1}.tif"),
                    inputB=glue("output/proj2050_{m2}.tif"),
                    output_file=glue("output/diff2050_{comp[i]}.tif"),
-                   blk_rows=1L)
+                   blk_rows=128L)
   }
   mat <- far$mat_diffproj(glue("output/diff2050_{comp[i]}.tif"))
   index_diff2050_30m <- rbind(index_diff2050_30m, accuracy_indices(mat))
-  diff2050_comp_30m <- index_diff2050_30m %>%
-    dplyr::mutate(res=rep(30,4),comp=comp) %>%
-	  dplyr::select(8,9,1:7)
 }
+diff2050_comp_30m <- index_diff2050_30m %>%
+  dplyr::mutate(res=rep(30,4),comp=comp) %>%
+  dplyr::select(8,9,1:7)
 ```
 
 We resample the differences at various resolution (1, 5 and 10 km) using a "mode" resampling method.
 
-```{r resampling_diff}
+```{r resampling_diff2050}
 resname <- c("250m", "500m", "1km", "5km", "10km")
 res <- c(250, 500, 1000, 5000, 10000)
 index_comp <- NULL
@@ -1026,12 +962,12 @@ We plot the differences.
 
 ```{r diff2050_plot}
 for (i in 1:length(comp)) {
-  #if (!file.exists(glue("output/diff2050_{comp[i]}.tif"))) {
+  if (!file.exists(glue("output/diff2050_{comp[i]}.tif"))) {
     cat(glue("Plot difference: {comp[i]}"),"\n")
     far$plot$differences(glue("output/diff2050_{comp[i]}.tif"),
                          borders="data/mada/mada38s.shp",
                          output_file=glue("output/diff2050_{comp[i]}.png"))
-  #}
+  }
 }
 ```
 
